[package]
name = "tichu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
socketioxide = { version = "0.10.2", features = ["state"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
